<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        tools:context=".fragments.serverchange.ServerSettingFragment">


        <TextView
            android:id="@+id/txtProtocolLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"

            android:text="@string/protocol"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleLabel"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/rdgSettingType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSettingTypeLabel">

            <RadioButton
                android:id="@+id/rdoDomain"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:checked="true"
                android:text="@string/domain" />

            <RadioButton
                android:id="@+id/rdoIpAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ip_address" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtSettingTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdgProtocolType" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"

            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdgSettingType" />


        <Button
            android:id="@+id/btnCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilContentsPath" />


        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:layout_marginRight="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilContentsPath" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContentsPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/context_path"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tetAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tetContextPath"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rdgProtocolType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtProtocolLabel">

            <RadioButton
                android:id="@+id/rdoHttp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:checked="true"
                android:text="@string/http" />

            <RadioButton
                android:id="@+id/rdoHttps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/https_secure_http" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

